# softpotato

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLA.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PROJECT_MANAGEMENT.md  PROMPT_TEMPLATE.md  README.md  ROADMAP.md  main.py  mkdocs.yml  pyproject.toml  setup.py  upload.sh  upload.txt
.github/workflows/: ci.yml  test.yml
docs/: api_reference.md  common_pitfalls.md  index.md  quickstart.md  traceability.md  tutorial_timegrid_to_waveform.md  waveforms.md
examples/: 01_reversible_cv.py
src/softpotato/: .technique.py.swp  __init__.py  _version.py  calc.py  calculate.py  plot.py  plotting.py  sim.py  simulate.py  tech.py  technique.py  timegrid.py  validation.py  waveforms.py
src/softpotato/core/: __init__.py  abcs.py
src/softpotato/discretizers/: __init__.py  fdm_1d.py
src/softpotato/mesh/: __init__.py  uniform_1d.py
src/softpotato/physics/: __init__.py  nernst_bc.py  species.py
src/softpotato/solvers/: __init__.py  ode_solver.py
src/softpotato/techniques/: __init__.py  cyclic_voltammetry.py
tests/: test_architecture.py  test_fdm_1d.py  test_m0_skeleton.py  test_m1_timegrid.py  test_m1_waveforms.py  test_mesh.py  test_reversible_cv.py  test_smoke_imports.py  test_smoke_metada.py  test_species.py  test_techniques.py
