[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "softpotato"
version = "3.0.0"
description = "Electrochemistry simulator and toolbox (Soft Potato)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Oliver Rodriguez" }
]
keywords = ["electrochemistry", "simulation", "voltammetry", "mass-transport", "butler-volmer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed"
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
num = [
  "numba>=0.59",
]

[project.urls]
Homepage = "https://softpotato.xyz"
Repository = "https://github.com/oliverrdz/softpotato"
Issues = "https://github.com/oliverrdz/softpotato/issues"

# If you expose CLIs later, add e.g.:
# [project.scripts]
# softpotato = "softpotato.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/softpotato"]

[tool.hatch.build.targets.sdist]
include = [
  "src/softpotato",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
mypy_path = "src"

[tool.coverage.run]
source = ["softpotato"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

