[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "softpotato"
version = "3.0.0-alpha0"
description = "Electrochemistry simulator and toolbox (Soft Potato)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Oliver Rodriguez" }
]
keywords = ["electrochemistry", "simulation", "voltammetry", "mass-transport", "butler-volmer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed"
]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "mkdocs",
  "mkdocs-material",
  "tomli; python_version < '3.11'",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
]
num = [
  "numba>=0.59",
]

[project.urls]
Homepage = "https://softpotato.xyz"
Repository = "https://github.com/oliverrdz/softpotato"
Issues = "https://github.com/oliverrdz/softpotato/issues"

# If you expose CLIs later, add e.g.:
# [project.scripts]
# softpotato = "softpotato.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/softpotato"]
include = ["src/softpotato/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
  "src/softpotato",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  # Core correctness
  "E",    # pycodestyle errors
  "F",    # pyflakes (undefined names, unused imports, etc.)

  # Imports & modern Python
  "I",    # import sorting
  "UP",   # pyupgrade

  # Bug-prone patterns (excellent for simulation code)
  "B",    # bugbear (mutable defaults, loop gotchas, etc.)

  # NumPy-specific best practices (low-noise, high-value)
  "NPY",  # numpy rules

  # Ruff “meta” hygiene (keeps lint directives honest)
  "RUF",  # e.g., unused noqa, ambiguous patterns

  # Performance micro-pitfalls (kept minimal; generally not noisy)
  "PERF", # common avoidable slow patterns

  # Readability simplifications (kept; usually safe)
  "SIM",
]

ignore = [
  "E501",     # line length (Black owns this)
  "NPY002",   # allow np.random.* legacy calls (common in sims); switch later if you want Generator-only
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "B018",   # “useless expression” (common with pytest patterns)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
mypy_path = "src"

[tool.coverage.run]
source = ["softpotato"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.black]
line-length = 88
target-version = ["py310"]

